# public-weather

./: .env  .gitignore  README.md  pyproject.toml
data/weather_data/: Weather_data_era5_2020.csv
data/weather_data/Demo_site_netcdf_data/: Demo_site_2m_temperature_2020.nc  Demo_site_surface_net_solar_radiation_2020.nc  Demo_site_surface_net_solar_radiation_2022.nc
notebooks/: Demo_notebook.ipynb
weather/: __init__.py  main.py
weather/api/: extractor.py  functions.py  weather_api.py
weather/structure/: enums.py  protocols.py  schema.py
